[gd_scene load_steps=3 format=3 uid="uid://c11fsjadtfkkr"]

[ext_resource type="Texture2D" uid="uid://bh7644ei8f4g6" path="res://Sprites/ItemSprites/mushroom_item.png" id="1_fhl4s"]
[ext_resource type="Script" path="res://Scenes/Views/conversation_view.gd" id="1_xthdy"]

[node name="ConversationView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("1_xthdy")
test = true

[node name="CharacterIconLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -256.0
offset_right = 256.0
grow_vertical = 0
texture = ExtResource("1_fhl4s")
expand_mode = 1
stretch_mode = 4

[node name="CharacterIconRight" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -256.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_fhl4s")
expand_mode = 1
stretch_mode = 4

[node name="ConversationText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -202.0
offset_right = -286.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(9.37752, 2.14127)
theme_override_font_sizes/normal_font_size = 16
text = "Test Text"
scroll_active = false

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.04

[connection signal="timeout" from="TextTimer" to="." method="_incrementText"]
